<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin_padding"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_linear"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/name_hint"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords"/>

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/price_hint"
                style="@style/EditorFieldStyle"
                android:inputType="numberDecimal"/>

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_book_quantity"
                android:hint="@string/quantity_hint"
                style="@style/EditorFieldStyle"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_book_supplier"
                android:hint="@string/supplier_name_hint"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_book_supplier_number"
                android:hint="@string/supplier_phone_number_hint"
                style="@style/EditorFieldStyle"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
