<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/listItem"
    android:orientation="horizontal"
    android:padding="@dimen/list_item_parent">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="@dimen/book_name_main"
            tools:text="Book's Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/quantity_main"
                android:textSize="@dimen/text_size_main_activity"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/text_size_main_activity"
                tools:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/priceStyle"
                android:text="@string/price_main_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                style="@style/priceStyle" />

            <TextView
                style="@style/priceStyle"
                android:text="@string/currency_sign_main" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sale"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_button"
        android:text="@string/sale_button"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>